# wave-function-collapse

./: .gitignore  BENCHMARKS.md  Cargo.toml  LICENSE.md  README.md  demo.py  index.html
.github/workflows/: rust.yml
benches/: wfc_benchmarks.rs
images/: README.md
images/carcassonne/: README.md  data.json
src/: app.rs  cli.rs  enum_map.rs  grid.rs  lib.rs  main.rs  renderer.rs  sprite.rs  superstate.rs  texture_cache.rs  tile.rs  wave.rs  wfc.rs  window.rs
src/render/: events.rs  image_renderer.rs  mod.rs  sdl_renderer.rs
src/renderer/: canvas_renderer.rs  sdl_renderer.rs
tests/: performance_tests.rs
