[package]
name = "wave-function-collapse"
version = "0.1.0"
edition = "2021"
license = "CC0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-map = "2.5"
image = { version = "0.24", optional = true }
imageproc = { version = "0.23", optional = true }
indicatif = "0.17"
lazy_static = { version = "1.4.0", optional = true }
log = "0.4"
num-traits = "0.2"
rand = "0.8"
rand_xorshift = "0.3"
rayon = { version = "1.7.0", optional = true }
rusttype = { version = "0.9", optional = true }
sdl2 = { version = "0.35", features = ["image", "unsafe_textures"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
simplelog = { version = "0.12", features = ["paris"] }
structopt = "0.3"
structopt-flags = "0.3"

[features]
default = ["image", "sdl2", "threaded"]
image = ["dep:image", "dep:imageproc", "dep:serde", "dep:serde_json", "dep:rusttype"]
sdl2 = ["image", "dep:sdl2"]
threaded = ["dep:rayon", "dep:lazy_static"]