[package]
name = "wave-function-collapse"
version = "0.1.0"
edition = "2021"
license = "CC0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-map = "2.5"
image = { version = "0.24", optional = true }
imageproc = { version = "0.23", optional = true }
indicatif = { version = "0.17", optional = true }
lazy_static = { version = "1.4.0", optional = true }
log = "0.4"
num-traits = "0.2"
rand = "0.8"
rand_xorshift = "0.3"
rayon = { version = "1.7.0", optional = true }
rusttype = { version = "0.9", optional = true }
sdl2 = { version = "0.35", features = ["image", "unsafe_textures"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
simplelog = { version = "0.12", features = ["paris"], optional = true }
structopt = { version = "0.3", optional = true }
structopt-flags = { version = "0.3", optional = true }

# WASM dependencies
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = [
  "console",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "ImageData",
  "Window",
] }
js-sys = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", optional = true }

[features]
default = ["image", "sdl2", "cli"]
image = ["dep:image", "dep:imageproc", "dep:serde", "dep:serde_json", "dep:rusttype"]
sdl2 = ["image", "dep:sdl2"]
threaded = ["dep:rayon", "dep:lazy_static"]
cli = ["dep:structopt", "dep:structopt-flags", "dep:indicatif", "dep:simplelog"]
wasm = ["image", "dep:wasm-bindgen", "dep:web-sys", "dep:js-sys", "dep:wasm-bindgen-futures", "dep:console_error_panic_hook", "dep:getrandom", "getrandom/js"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wave-function-collapse"
path = "src/main.rs"
required-features = ["cli"]

[profile.release]
lto = "fat"
