[package]
name = "wave-function-collapse"
version = "0.1.0"
edition = "2021"
license = "CC0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-map = "2.5"
fxhash = "0.2"
image = { version = "0.24", optional = true }
imageproc = { version = "0.23", optional = true }
indicatif = "0.17"
lazy_static = { version = "1.4.0", optional = true }
log = "0.4"
num-traits = "0.2"
rand = "0.8"
rand_xorshift = "0.3"
rayon = { version = "1.7.0", optional = true }
rusttype = { version = "0.9", optional = true }
sdl2 = { version = "0.35", features = ["image", "unsafe_textures"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
simplelog = { version = "0.12", features = ["paris"] }
structopt = "0.3"
structopt-flags = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "wfc_benchmarks"
harness = false

[lib]
name = "wave_function_collapse"
path = "src/lib.rs"

[[bin]]
name = "wave-function-collapse"
path = "src/main.rs"

[features]
default = ["image-output", "visual"]

# Core features
image-input = ["dep:image", "dep:imageproc", "dep:serde", "dep:serde_json", "dep:rusttype"]
image-output = ["image-input"]
visual = ["image-input", "dep:sdl2"]
threaded = ["dep:rayon", "dep:lazy_static"]

# Convenience aliases
image = ["image-input"]  # Backward compatibility
sdl2 = ["visual"]        # Backward compatibility

[profile.release]
lto = "fat"

[profile.profiling]
inherits = "release"
debug = true